* BUG: 1775084 - No scroll with long line in <pre>   Added additional pre style to enable scrollbars for wide <pre> blocks.
git-svn-id: https://flexwiki.svn.sourceforge.net/svnroot/flexwiki/flexwikicore/trunk@724 662ad2f3-a61f-0410-a8b9-97bb17fbd72e

--- a/FlexWiki.Web/wiki.css
+++ b/FlexWiki.Web/wiki.css
@@ -14,6 +14,12 @@ padding:0;
 code, pre {
 font:bold small Consolas,Courier New,Courier,monospace;
 }
+pre {
+background:#FFFAF2;
+border:solid 1px #6A4E22;
+overflow:auto;
+padding:4px 4px 4px 0;
+}
 img {
 border:0;
 }
@@ -379,11 +385,9 @@ width:auto;
 .SearchColumnFilterBox {
 }
 .SearchEvenRow {
-font-size:0.75em;
 }
 .SearchOddRow {
 background:#FFF;
-font-size:0.75em;
 }
 .SearchMain {
 background:#FFF;
